<resources>
    <string name="app_name">MyLib</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="createAccount">Sign Up</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="books">Books</string>
    <string name="games">Games</string>
    <string name="logout">Logout</string>
    <string name="read">Read</string>
    <string name="to_read">To read</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="rate">Rate</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="swap">Swap</string>
    <string name="played">Played</string>
    <string name="to_play">To play</string>
    <string name="watched">Watched</string>
    <string name="to_watch">To watch</string>
    <string name="search">Search</string>
</resources>